
Features under a numbered section are complete and available in the Wrest gem.

== Coming soon
 * Proxy support
 * Multi-part post support on curl
 
== In progress
 * 304/ETag response caching
 * Keep-alive support for libcurl
 * Cookie support
 * Response code checkers: ok?, redirect?, created? etc.
 * Alias deserialise as deserialize
 * Make Components::Containers hash store a HashWithIndifferentAccess
 * Ensure Components::Container is ActiveModel compliant

== 1.0.0.beta1
 * If libxml-ruby isn't found but nokogiri, don't warn about libxml-ruby

== 1.0.0.beta0
 * Dependencies updated to ActiveSupport 3.0.0.rc and RSpec 2.0.0.beta19

== 0.1.2
 * Locked gem dependencies to ActiveSupport 2.3.8 and rspec 1.3.0 to avoid breakages caused by inadvertently requiring the Rails 3.0 and Rspec 2.0 gems which have changed greatly

== 0.1.1
 * Multipart post and put using Net::Http

== 0.1.0
 * Added Nokogiri as a fallback for LibXML Ruby before we give up and use REXML. (Nokogiri is available on JRuby, unlike LibXML-ruby)
 * Added code to attempt to load JREXML (for what it's worth) when using REXML on JRuby
 * Ensure that Wrest throws an exception when an actual request is made in a test environment in Rails (RAILS_ENV == 'test')
 * Support for keep-alive connections via Wrest::Http::Session and Wrest::Http::Response#connection_closed?
 * Create two convenience Post methods on Uri - one for application/x-www-form-urlencoded and the other normal
 * Optional libcurl implementations of the Request/Response classes (for those on MRI who need better performance). See examples/delicious.rb, examples/facebook.rb. Note that while there is a great deal of API compatibility, everything may not behave exactly the same under libcurl. Please do report inconsistencies.
 * Added live functional tests to codebase (rake spec:functional, needs spec/functional/sample_rails_app running on port 3000)
 
== 0.0.9
 * Added redirect follow support for GET requests (see examples/redirection.rb)