@@ -1,5 +1,5 @@
 --- 
-:build: beta1
+:build: beta2
 :patch: 0
 :minor: 0
 :major: 1
